--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ the future together, Let's work together, About Us, Built on a Strong Foundation
                     <h1
                       class="u-align-left u-custom-font u-font-roboto-condensed u-text u-text-palette-3-base u-text-4">
                       Про нас</h1>
-                    <img class="u-expanded-width u-image u-image-2" src="images/er.jpg" data-image-width="900"
+                    <img class="u-expanded-width u-image u-image-2" src="er.jpg" data-image-width="900"
                       data-image-height="900">
                     <p class="u-align-left u-text u-text-5">Мы стремимся построить качественный объект, за который будем
                       гордиться. Мы стремимся построить Вам дом, в котором Вы будете просто жить и наслаждаться. Вам не
